--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-one" id="header">
         <h1 class="header-title">Web-приложение</h1>
-        <p class="header-subtitle">Расчет показателей баланса электроэнергии </p>
+        <p class="header-subtitle">Тестовая работа</p>
         <a href="#portfolio" class="header-arrow"> <img src="./imagen/keyboard_arrow_down_48dp_E8EAED_FILL0_wght400_GRAD0_opsz48.svg" alt="arrow">
         </a>
     </header>
