--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header-one" id="header">
-        <h1 class="header-title">Web-приложение</h1>
+        <h1 class="header-title">Тестовая работа</h1>
         <p class="header-subtitle">Тестовая работа</p>
         <a href="#portfolio" class="header-arrow"> <img src="./imagen/keyboard_arrow_down_48dp_E8EAED_FILL0_wght400_GRAD0_opsz48.svg" alt="arrow">
         </a>
