Изменен заголовок карточки 1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="card">
                         <a href="index2.html" class="card-link">
                             <img class="card-img" src="./imagen/portfolio/portf-1.jpg" alt="imagen">
-                            <h3 class="card-title">Многостраничный сайта</h3>
+                            <h3 class="card-title">Вторая страница сайта</h3>
                             <p>Верстка многостраничного сайта</p>
                         </a>
                     </div>
