--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <!-- // Footer icons-->
                 <div class="footer-contacs footer-col">
-                    <a href="https://dzen.ru/webcademy" class="footer-button"> Связаться с нами</a>
+                    <a href="#" class="footer-button"> Связаться с нами</a>
                     <p>Напиши мне для того что бы узнать стоимость </p>
                 </div> 
             </div>
